--- a/LemonadeStand/LemonadeStand_3DayStarter.csproj
+++ b/LemonadeStand/LemonadeStand_3DayStarter.csproj
@@ -44,6 +44,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cup.cs" />
+    <Compile Include="Customer.cs" />
+    <Compile Include="Day.cs" />
+    <Compile Include="Game.cs" />
     <Compile Include="IceCube.cs" />
     <Compile Include="Inventory.cs" />
     <Compile Include="Item.cs" />
@@ -51,10 +54,12 @@
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Recipe.cs" />
     <Compile Include="Store.cs" />
     <Compile Include="SugarCube.cs" />
     <Compile Include="UserInterface.cs" />
     <Compile Include="Wallet.cs" />
+    <Compile Include="Weather.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
